bug: 75608
Use valueOf() instead of new() for Integer, Short, Long, Character, and Byte.

http://bugzilla.zimbra.com/show_bug.cgi?id=75608

Copied from Perforce
 Change: 380259