@@ -2,12 +2,12 @@
  * ***** BEGIN LICENSE BLOCK *****
  * Zimbra Collaboration Suite Server
  * Copyright (C) 2008, 2009, 2010 Zimbra, Inc.
- * 
+ *
  * The contents of this file are subject to the Zimbra Public License
  * Version 1.3 ("License"); you may not use this file except in
  * compliance with the License.  You may obtain a copy of the License at
  * http://www.zimbra.com/license.
- * 
+ *
  * Software distributed under the License is distributed on an "AS IS"
  * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.
  * ***** END LICENSE BLOCK *****
@@ -419,6 +419,7 @@ public class ZoneInfo2iCalendar {
 
     private static class ZoneComparatorByGmtOffset implements Comparator<Zone> {
 
+        @Override
         public int compare(Zone z1, Zone z2) {
             if (z1 == null && z2 == null)
                 return 0;
@@ -781,9 +782,9 @@ public class ZoneInfo2iCalendar {
                 Integer matchScore = sMatchScores.get(tzid);
                 if (matchScore == null) {
                     if (isPrimary)
-                        matchScore = new Integer(TZIDMapper.DEFAULT_MATCH_SCORE_PRIMARY);
+                        matchScore = Integer.valueOf(TZIDMapper.DEFAULT_MATCH_SCORE_PRIMARY);
                     else
-                        matchScore = new Integer(TZIDMapper.DEFAULT_MATCH_SCORE_NON_PRIMARY);
+                        matchScore = Integer.valueOf(TZIDMapper.DEFAULT_MATCH_SCORE_NON_PRIMARY);
                 }
                 Set<String> aliases = zone.getAliases();
                 ZoneLine zline = getZoneLineForYear(zone, params.year);
